[feature] [sp01] [mssousa] - Ajustes na converção do token JWT